# ChangeLog for xfce-extra/exo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/exo/ChangeLog,v 1.82 2009/04/21 04:32:00 darkside Exp $

*exo-0.3.101 (21 Apr 2009)

  21 Apr 2009; Jeremy Olexa <darkside@gentoo.org> -exo-0.3.100.ebuild,
  +exo-0.3.101.ebuild:
  Version bump for xfce-4.6.1 release, remove old

  11 Mar 2009; Christoph Mende <angelos@gentoo.org> exo-0.3.100.ebuild:
  Avoid pre-compiling py files (bug #262098)

*exo-0.3.100 (10 Mar 2009)

  10 Mar 2009; Christoph Mende <angelos@gentoo.org> +exo-0.3.100.ebuild:
  Xfce-4.6 bump

  09 Feb 2009; Christoph Mende <angelos@gentoo.org> -exo-0.3.4-r1.ebuild:
  Removed old

  04 Feb 2009; Raúl Porcel <armin76@gentoo.org> exo-0.3.4-r2.ebuild:
  arm/ia64/sparc stable wrt #254440

  25 Jan 2009; Tobias Klausmann <klausman@gentoo.org> exo-0.3.4-r2.ebuild:
  Stable on alpha, bug #254440

  21 Jan 2009; Jeroen Roovers <jer@gentoo.org> exo-0.3.4-r2.ebuild:
  Stable for HPPA (bug #254440).

  18 Jan 2009; Markus Meier <maekke@gentoo.org> exo-0.3.4-r2.ebuild:
  x86 stable, bug #254440

  13 Jan 2009; Brent Baude <ranger@gentoo.org> exo-0.3.4-r2.ebuild:
  Marking exo-0.3.4-r2 ppc64 and ppc for bug 254440

  12 Jan 2009; Jeremy Olexa <darkside@gentoo.org> exo-0.3.4-r2.ebuild:
  amd64 stable, bug 254440

  13 Dec 2008; Christoph Mende <angelos@gentoo.org> exo-0.3.4-r1.ebuild,
  exo-0.3.4-r2.ebuild:
  Depend on <gtk-doc-1.10 or gtk-doc-am for arches where gtk-doc-am is not
  stable but gtk-doc-1.8 is

*exo-0.3.4-r2 (01 Dec 2008)

  01 Dec 2008; Christoph Mende <angelos@gentoo.org>
  +files/exo-0.3.4-inline-functions.patch, +exo-0.3.4-r2.ebuild:
  Don't declare exo_atomic_{inc,dec} when the functions are not available

  20 Nov 2008; Christoph Mende <angelos@gentoo.org> -exo-0.3.4.ebuild:
  Removed old

  20 Nov 2008; Brent Baude <ranger@gentoo.org> exo-0.3.4-r1.ebuild:
  Marking exo-0.3.4-r1 ppc64 for bug 245970
