@@ -4,7 +4,7 @@ AUX exo-0.3.4-interix.patch 2673 RMD160 7acc7327919b65fcf7eded4ceb6c70861f488a78
 AUX exo-0.3.4-remove-libmd5.patch 1929 RMD160 5f60292142bddb195a0dfdb88fab2f546d7bc8d2 SHA1 89483f5851ab962fbea85dc1a7755c5a3cdea153 SHA256 b7898b1410d973a89c4137ec2972f3b88d17438a495065d19a5b0f7a1f8d1833
 DIST exo-0.3.101.tar.bz2 1793815 RMD160 92dfc1e8f0bfa8ca74f151a2283f6988ce703649 SHA1 74194f58278a2b9d963264806f142e5d6d05336c SHA256 0016f6ff0d1d22ed42fb5c9bcecc5559a62572781446fdfd1444786b5d33e324
 DIST exo-0.3.4.tar.bz2 1300127 RMD160 e021f030a624c522c819ec0f3a8682a1007ae748 SHA1 4f7a3f46592fd0311be1f011f17431f211cc1fcb SHA256 a5373e9bd6055caa7cd5d06128f6236cfd2f4f6657ea4a85d7bd9eafe5bf0538
-EBUILD exo-0.3.101.ebuild 1436 RMD160 085da896b4af631a93db555e71b474cf4538b809 SHA1 f62e4f814a2db8fd43ed961d4593453ea791afb0 SHA256 5e388ca48957959c93d76fd00ff3c7876e36ee86078a29899aa360c2b4da14b5
+EBUILD exo-0.3.101.ebuild 1435 RMD160 2aed9d86f182bde8d718cf4b9580747b97ba2178 SHA1 e6a1cd6eece838ee29dd9c0313b0b787d1cc4adf SHA256 132d00ab9d4569eb8d79f51fa4830e8289ebf8ce2fcdfe6bf7a9ec4edcca2fc8
 EBUILD exo-0.3.4-r2.ebuild 2237 RMD160 4cf70f1d49e9b0af7b84c3981401b39c89e82e94 SHA1 e90357ee2d2b7515a7bc119ef1ae3b61c198f0ef SHA256 64d56d4c69779034e42ae0d880f990f68772ff746de0079d4aaa5945a8680977
-MISC ChangeLog 10251 RMD160 b96fe26b97f9a68f55c3470600eed2e2c2fe3495 SHA1 9485ba35c6787117d52656e1953064a993eb757a SHA256 0568e0f7470b67fd3a54f02f39c9f2ae65382a7d2672ec7b5f69cf9e878d3298
+MISC ChangeLog 10409 RMD160 d55af56833e55186059acce6b8c8e6cce8c2c2d4 SHA1 af7ad346c31e7f72cee0e76172eb2f87681b0b39 SHA256 8663f03bd62ec5b1b552e8fba5344184e28891023ea8b063b1b755eb98f09cd2
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
